[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/main_screens/question_templates/Elements/base_question_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/main_screens/question_templates/Elements/big_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/main_screens/question_templates/Elements/true_false_panel.gd" type="Script" id=6]

[node name="TrueFalsePanel" instance=ExtResource( 1 )]
script = ExtResource( 6 )
title = "Responda VERDADERO o FALSO"
auto_show = false
currect_answer = true

[node name="Title" parent="Panel" index="0"]
margin_bottom = 53.0

[node name="TrueButton" parent="Panel" index="2" instance=ExtResource( 5 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -226.5
margin_top = -254.0
margin_right = -61.5
margin_bottom = -89.0
color = Color( 0.0313726, 1, 0, 1 )
button_text = "VERDADERO"

[node name="FalseButton" parent="Panel" index="3" instance=ExtResource( 5 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 53.5
margin_top = -254.0
margin_right = 218.5
margin_bottom = -89.0
color = Color( 1, 0, 0, 1 )
button_text = "FALSO"

[node name="Question" parent="Panel" index="4"]
margin_left = 48.0
margin_top = 119.0
margin_right = -42.0
margin_bottom = -256.0

[connection signal="pressed" from="Panel/TrueButton" to="." method="_on_TrueButton_pressed"]
[connection signal="pressed" from="Panel/FalseButton" to="." method="_on_FalseButton_pressed"]
